# wit_robotics_2025

./: .gitignore  .gitmodules  CMakeLists.txt  LINUX.md  README.md  WINDOWS.md  build.bat  build.ps1  build.sh  esc-calibartion.py  flash.bat  flash.ps1  flash.sh  hello_world.c  motor.py  orange_motor.py  pyproject.toml  reverse_test.py  secrets.sh  setup.bat
.github/: CODEOWNERS
battlebot/: main.py
battlebot/control/: motor.py
battlebot/src/: config.py  logger.py  main.py  motor_controller.py  secrets.example.py  telemetry.py  tempcontroller.py  utils.py  web_server.py  wifi_ap.py
battlebot/src/classes/: esc_motor.py
battlebot/tools/: log_decoder.py
scratch/: README.md  tmp.py
scratch/pico/: tmp.py
scratch/pico/garbageish/: arm-wrefresh.py  arm.py  calibrate.py  esc_diagnostic.py  esc_hardware_only.py  esc_inverted.py  inverted_motor_test.py
scratch/pico/keepsies/flydragon_esc/: esc_gp2_cli.py
scratch/pico/keepsies/green_esc/: crawler_control.py  crawler_gradual.py  crawler_neutral.py  crawler_test.py  temp.py
scratch/raspi-5/: esc_hold_neutral.py  esc_neutral_pigpio_coast.py  sc_boot_arming.py  sc_pca9685_neutral_hold.py
scratch/shared/: README.md
scratch/shared/pico/: NOTES.md  blink.py  esc_gp2.py  main.py
scratch/shared/raspi-5/: reverse_test.py
scripts/: build-linux.sh  build.bat  build.sh  flash-linux.sh  flash.bat  flash.sh  secrets-linux.sh  setup-linux.sh  setup-windows.ps1  setup.bat
scripts/experiments/: README.md
src/: config.h  main.c  motor_controller.h  my_platform.c  secrets.h.age  telemetry.c
src/bluetooth/: my_platform.c
src/config/: btstack_config.h  config.h  lwipopts.h  sdkconfig.h  secrets.h  secrets.h.example
src/dhcpserver/: dhcpserver.c
src/hardware/: motor.c  motor.h  motor_controller.c  motor_controller.h  telemetry.h
src/networking/: web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
