[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battlebot"
version = "0.1.0"
description = "Control system for a combat robot"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Jasper Mayone", email = "mayonej@wit.edu"}
]
dependencies = [
    "RPi.GPIO>=0.7.1",  # For Raspberry Pi GPIO control
]

[project.optional-dependencies]
dev = [
]

[project.scripts]
battlebot = "battlebot.main:main"